--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JOMMO KENYATTA TRIBUTE PAGE</title>
     <link rel="stylesheet" href="style.css">
+    <H1> MZEE JOMMO KENYATTA</H1>
 </head>
 <body>
-    <div>
-        <H1> MZEE JOMO KENYATTA</H1>
-    </div>
+
     
 
         <div>
